# ai-clone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aayush_gupta.md  check_api.py  fly.toml  pyproject.toml  render.yaml
app/: crypto.py  db.py  ingest.py  main.py  rag.py
app/providers/: base.py  gemini.py
app/templates/: admin.html  base.html  chat.html  create.html  created.html  edit.html
