[project]
name = "ai-clone"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "jinja2>=3.1.6",
    "nanoid>=2.0.0",
    "pypdf>=6.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.49.0",
]
